<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.kis.powp</groupId>
	<artifactId>jobs2d</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<name>Visual2Djobs</name>
	<description>POWP software for devices operating on 2d plane</description>
  
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>	
		<dependency>
	        <groupId>edu.kis.powp.jobs2d</groupId>
	        <artifactId>jobs2dmagic</artifactId>
	        <version>1.0.0</version>
	        <scope>system</scope>
	        <systemPath>${project.basedir}/lib/Jobs2dMagic.jar</systemPath>
	    </dependency>
	    <dependency>
	        <groupId>edu.kis.legacy</groupId>
	        <artifactId>drawer</artifactId>
	        <version>1.0.0</version>
	        <scope>system</scope>
	        <systemPath>${project.basedir}/lib/Drawer.jar</systemPath>
	    </dependency>
		<dependency>
	        <groupId>edu.kis.powp</groupId>
	        <artifactId>appbase</artifactId>
	        <version>1.0.0</version>
	        <scope>system</scope>
	        <systemPath>${project.basedir}/lib/PowpAppBase.jar</systemPath>
	    </dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
    </dependencies>
	
</project>